Fixed comments and spelling mistakes

--- a/templates/conventional.hbs
+++ b/templates/conventional.hbs
@@ -23,7 +23,7 @@ Example Definitions
 --}}
 
 
-{{!-- In package.json need to add this to remove label text from the change log output (becuase the markdown headers are now used to group them).
+{{!-- In package.json need to add this to remove label text from the change log output (because the markdown headers are now used to group them).
    NOTES • Individual brackets have been escaped twice to be Json compliant.
          • For items that define a scope eg feat(bldAssess): We remove the 1st bracket and then re-add it so we can select the right piece of text
 {
@@ -63,7 +63,7 @@ Example Definitions
  \s = whitespace
  . = any character except newline
  | = or
- [aA] = charcter a or character A
+ [aA] = character a or character A
  --}}
 
 
@@ -91,44 +91,44 @@ Example Definitions
 
   {{! List commits with 'breaking:' or 'Breaking change:' anywhere in the message under a heading}}
   {{#commit-list commits heading='#### Breaking Changes :warning:' message='[bB]reaking [cC]hange:|[bB]reaking:' }}
-    - {{subject}} @{{author}}  <!--[`{{shorthash}}`]({{href}}) -->
+    - {{subject}} @{{author}}  {{!--[`{{shorthash}}`]({{href}}) --}}
   {{/commit-list}}
 
   {{! List commits organised under a heading, but not those already listed in the breaking section }}
       {{#commit-list commits heading='#### New Features' message='^[fF]eat:|[fF]eat\(' exclude='[bB]reaking [cC]hange:|[bB]reaking:'}}
-        - {{subject}} @{{author}} <!--[`{{shorthash}}`]({{href}}) -->
+        - {{subject}} @{{author}} {{!--[`{{shorthash}}`]({{href}}) --}}
       {{/commit-list}}
 
       {{#commit-list commits heading='#### Fixes' message='^[fF]ix:|^[fF]ix\(' exclude='[bB]reaking [cC]hange:|[bB]reaking:'}}
-        - {{subject}} @{{author}} <!--[`{{shorthash}}`]({{href}}) -->
+        - {{subject}} @{{author}} {{!--[`{{shorthash}}`]({{href}}) --}}
       {{/commit-list}}
 
       {{#commit-list commits heading='#### Chores And Housekeeping' message='^[cC]hore:|^[cC]hore\(' exclude='[bB]reaking [cC]hange:|[bB]reaking:'}}
-        - {{subject}} @{{author}} <!--[`{{shorthash}}`]({{href}}) -->
+        - {{subject}} @{{author}} {{!--[`{{shorthash}}`]({{href}}) --}}
       {{/commit-list}}
 
       {{#commit-list commits heading='#### Documentation Changes' message='^[dD]ocs:|^[dD]ocs\(' exclude='[bB]reaking [cC]hange:|[bB]reaking:'}}
-        - {{subject}} @{{author}} <!--[`{{shorthash}}`]({{href}}) -->
+        - {{subject}} @{{author}} {{!--[`{{shorthash}}`]({{href}}) --}}
       {{/commit-list}}
 
       {{#commit-list commits heading='#### Refactoring and Updates' message='^[rR]efactor:|^[rR]efactor\(' exclude='[bB]reaking [cC]hange:|[bB]reaking:'}}
-        - {{subject}} @{{author}} <!--[`{{shorthash}}`]({{href}}) -->
+        - {{subject}} @{{author}} {{!--[`{{shorthash}}`]({{href}}) --}}
       {{/commit-list}}
 
       {{#commit-list commits heading='#### Changes to Test Assests' message='^[tT]est:|^[tT]est\(' exclude='[bB]reaking [cC]hange:|[bB]reaking:'}}
-        - {{subject}} @{{author}} <!--[`{{shorthash}}`]({{href}}) -->
+        - {{subject}} @{{author}} {{!--[`{{shorthash}}`]({{href}}) --}}
       {{/commit-list}}
 
       {{#commit-list commits heading='#### Tidying of Code eg Whitespace' message='^[sS]tyle:|^[sS]tyle\(' exclude='[bB]reaking [cC]hange:|[bB]reaking:'}}
-        - {{subject}} @{{author}} <!--[`{{shorthash}}`]({{href}}) -->
+        - {{subject}} @{{author}} {{!--[`{{shorthash}}`]({{href}}) --}}
       {{/commit-list}}
 
       {{#commit-list commits heading='#### Performance Improvments' message='^[pP]erf:|^[pP]erf\(' exclude='[bB]reaking [cC]hange:|[bB]reaking:'}}
-        - {{subject}} @{{author}} <!--[`{{shorthash}}`]({{href}}) -->
+        - {{subject}} @{{author}} {{!--[`{{shorthash}}`]({{href}}) --}}
       {{/commit-list}}
 
       {{#commit-list commits heading='#### General Changes' exclude='[bB]reaking [cC]hange:|[bB]reaking:|^[fF]eat:|^[fF]eat\(|^[fF]ix:|^[fF]ix\(|^[cC]hore:|^[cC]hore\(|^[dD]ocs:|^[dD]ocs\(|^[rR]efactor:|^[rR]efactor\(|^[tT]est:|^[tT]est\(|^[sS]tyle:|^[sS]tyle\(|^[pP]erf:|^[pP]erf\('}}
-        - {{subject}} @{{author}} <!--[`{{shorthash}}`]({{href}}) -->
+        - {{subject}} @{{author}} {{!--[`{{shorthash}}`]({{href}}) --}}
       {{/commit-list}}
 
 {{/each}}
